style.css
:root {
  --Purple-50: hsl(260, 100%, 95%);
  --Purple-300: hsl(264, 82%, 80%);
  --Purple-500: hsl(263, 55%, 52%);

  --White: hsl(0, 0%, 100%);
  --Grey-100: hsl(214, 17%, 92%);
  --Grey-200: hsl(0, 0%, 81%);
  --Grey-400: hsl(224, 10%, 45%);
  --Grey-500: hsl(217, 19%, 35%);
  --Dark-blue: hsl(219, 29%, 14%);
  --Black: hsl(0, 0%, 7%);

  --Background: hsl(300, 5%, 96%);
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  background-color: var(--Background);
  font-family: "Barlow Semi Condensed";
  font-size: 1.3rem;
  line-height: 140%;
  font-weight: 500;

  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 100dvh;

  padding: 3.2rem;
}

.testimonies {
  width: 100%;
  max-width: 111.4rem;

  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 3.2rem;
  row-gap: 2.4rem;
}

.testimony {
  padding: 3.2rem;
  border-radius: 0.8rem;
  box-shadow: 4rem 6rem 5rem -4.7rem hsla(217, 19%, 35%, 24.74%);
}

.testimony__user {
  margin-bottom: 1.6rem;
}

.testimony__heading {
  font-size: 2rem;
  font-weight: 600;
  line-height: 120%;
  margin-bottom: 1.6rem;
}

.testimony--1 {
  grid-column: 1/3;
  background-color: var(--Purple-500);
  color: var(--White);
  background-image: url(/images/bg-pattern-quotation.svg);
  background-repeat: no-repeat;
  background-position: top right 6rem;
}

.testimony--2 {
  grid-column: 3/4;
  background-color: var(--Grey-500);
  color: var(--White);
}

.testimony--3 {
  grid-column: 4/5;
  grid-row: 1/3;
  background-color: var(--White);
  color: var(--Grey-500);
}

.testimony--4 {
  grid-column: 1/2;
  background-color: var(--White);
  color: var(--Grey-500);
}

.testimony--5 {
  grid-column: 2/4;
  background-color: var(--Dark-blue);
  color: var(--Grey-200);
}

.user {
  display: grid;
  grid-template-columns: auto 100%;
  column-gap: 1.6rem;
}

.user__image {
  grid-row: 1/3;
  background-position: center;
  background-size: cover;
  width: 2.8rem;
  height: 2.8rem;
  border-radius: 2.8rem;
}

.user__name {
  font-size: 1.3rem;
  line-height: 110%;
}

.user__data {
  font-size: 1.1rem;
  line-height: 110%;
}

.testimony--1 .user__image {
  background-image: url(/images/image-daniel.jpg);
  border: 0.2rem solid var(--Purple-300);
}

.testimony--2 .user__image {
  background-image: url(/images/image-jonathan.jpg);
}

.testimony--3 .user__image {
  background-image: url(/images/image-kira.jpg);
}

.testimony--4 .user__image {
  background-image: url(/images/image-jeanette.jpg);
}

.testimony--5 .user__image {
  background-image: url(/images/image-patrick.jpg);
}

@media (max-width: 1160px) {
  .testimonies {
    max-width: 64.7rem;

    grid-template-columns: repeat(2, 1fr);
    column-gap: 3.2rem;
    row-gap: 3.2rem;
  }

  .testimony--1 {
    grid-column: 1/3;
    background-position: top right 6rem;
  }

  .testimony--2 {
    grid-column: 1/2;
  }

  .testimony--3 {
    grid-column: 1/3;
    grid-row: 4/5;
  }

  .testimony--4 {
    grid-column: 2/3;
    grid-row: 2/3;
  }

  .testimony--5 {
    grid-column: 1/3;
    grid-row: 3/4;
  }
}

@media (max-width: 715px) {
  .testimonies {
    max-width: 30.5rem;

    grid-template-columns: 1fr;
  }

  .testimony--1 {
    grid-column: 1/2;
    background-image: none;
  }

  .testimony--2 {
    grid-column: 1/2;
  }

  .testimony--3 {
    grid-column: 1/2;
    grid-row: 5/6;
  }

  .testimony--4 {
    grid-column: 1/2;
    grid-row: 2/3;
  }

  .testimony--5 {
    grid-column: 1/2;
    grid-row: 4/5;
  }
}

@media (max-width: 367px) {
  html {
    font-size: 55%;
  }
}

